java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/SnippetMethod.java
/** {<warning descr="'@snippet' tag is not available at this language level">@snippet</warning> :
 * void f<error descr="';' expected">(</error><error descr="Expression expected">)</error> {}
 * }
 */
class A {
}